tests/verifier/fail/test12.ial
type S
{
}

function void eh_reach_test()
{
    block entry
    {
        jump (foo);
    }

    block foo
    {
        eh.rethrow;
    }
}
